# moabspkg

./: .gitignore  README.md  configure.ac
lib/samtools/: Makefile
src/: Makefile.am
src/ExactNumCI/: numCI
src/bsmap/: Makefile.am
src/mcall/: Makefile.am  mcall.cpp
src/mcomp/: Makefile.am  bbf.cpp  bbf.h  makefile_static  mcomp.cpp  types.cpp  types.h
